# pga-application

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  railway.toml  start.sh
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/auth/: dependencies.py
backend/app/db/: __init__.py  supabase.py
backend/app/models/: __init__.py  assessment.py  extraction_schemas.py  knowledge_graph.py  question_generator.py  questionnaire.py  search.py  web_crawler.py
backend/app/routers/: __init__.py  assessment.py  framework.py  framework_docs.py  knowledge.py  questionnaire.py  questions.py  search.py
backend/app/services/: __init__.py  assessment_orchestrator.py  context_aggregator.py  document_analyzer.py  document_text_extractor.py  embedding_service.py  llama_extract_service.py  neo4j_service.py  qdrant_service.py  question_generator.py  question_swarm.py  question_swarm_prompts.py  question_validator.py  questionnaire_agent.py  supabase_vector_service.py  web_crawler_agent.py
backend/app/services/web_crawler/: __init__.py  agent.py  asset_discovery.py  (+11 more)
backend/docs/framework/: bnm-rmit-policy-requirements.md  iso27001-2022-annex-a-controls.md
backend/scripts/: populate_frameworks.py  test_anthropic.py  test_question_generator.py
backend/tests/: __init__.py  test_assessment.py  test_assessment_orchestrator.py  test_question_swarm.py
backend/tests/test_web_crawler/: test_agent.py  test_base_extractor.py  test_confidence.py  test_llm_utils.py
(+116 files in other folders)
